[gd_scene load_steps=19 format=3 uid="uid://days6oebor2pc"]

[ext_resource type="Script" path="res://main.gd" id="1_h50io"]
[ext_resource type="PackedScene" uid="uid://cu33ydpx8lnkt" path="res://player.tscn" id="1_hxvd1"]
[ext_resource type="PackedScene" uid="uid://bkx70fpsr6i54" path="res://sith_trooper.tscn" id="2_mk7ao"]
[ext_resource type="PackedScene" uid="uid://c6dfw7khoj0rm" path="res://sith_kinghts.tscn" id="3_ls5hb"]
[ext_resource type="AudioStream" uid="uid://dc5i80bx4k5q4" path="res://Sound effects/lightsaber-clash.mp3" id="5_5mftu"]
[ext_resource type="AudioStream" uid="uid://c3d5bofd3vh60" path="res://Sound effects/Die (var - 2).mp3" id="5_iganr"]
[ext_resource type="PackedScene" uid="uid://lwlhc8bbtjt6" path="res://Map.tscn" id="6_2xff2"]
[ext_resource type="AudioStream" uid="uid://wsqrjyu5gc1q" path="res://Sound effects/Die (var - 3).mp3" id="7_mmcqs"]
[ext_resource type="AudioStream" uid="uid://dmely5dw3r8d7" path="res://Sound effects/Lightsaber Turn On.mp3" id="7_pgd7c"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ou4wr"]
sky_top_color = Color(0.211765, 0.0862745, 0.0235294, 1)
sky_horizon_color = Color(0.661765, 0.633333, 0.606863, 1)
sky_energy_multiplier = 6.0
ground_bottom_color = Color(0.435294, 0.447059, 0.403922, 1)
ground_horizon_color = Color(0.661765, 0.633333, 0.606863, 1)

[sub_resource type="Sky" id="Sky_5tspo"]
sky_material = SubResource("ProceduralSkyMaterial_ou4wr")

[sub_resource type="Environment" id="Environment_6s3xo"]
background_mode = 2
sky = SubResource("Sky_5tspo")
tonemap_mode = 2
glow_enabled = true
volumetric_fog_enabled = true
volumetric_fog_density = 0.03
volumetric_fog_detail_spread = 6.0

[sub_resource type="Theme" id="Theme_ptwst"]

[sub_resource type="BoxShape3D" id="BoxShape3D_x3ma2"]
size = Vector3(80, 2.354, 80)

[sub_resource type="Curve3D" id="Curve3D_3d3av"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -38.7244, 5.72205e-05, -38.4097, 0, 0, 0, 0, 0, 0, 38.4253, 5.72205e-05, -38.5858, 0, 0, 0, 0, 0, 0, 38.7775, 5.72205e-05, 39.2684, 0, 0, 0, 0, 0, 0, -38.9006, 5.72205e-05, 39.0923, 0, 0, 0, 0, 0, 0, -38.5483, 5.72205e-05, -38.4097),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_a47c8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_dh6sm"]
size = Vector3(2, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2ax74"]
font_size = 40

[node name="Main" type="Node3D"]
script = ExtResource("1_h50io")
sith_trooper_scene = ExtResource("2_mk7ao")
sith_knights_scene = ExtResource("3_ls5hb")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_6s3xo")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 26.199, 0)
light_color = Color(0.592157, 0.337255, 0.227451, 1)
light_energy = 1.32
light_indirect_energy = 1.085
light_volumetric_fog_energy = 0.955
light_angular_distance = 0.25
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_hxvd1")]
transform = Transform3D(-0.990119, 0, 0.140227, 0, 1, 0, -0.140227, 0, -0.990119, -2.97532, 0.828883, 37.9171)
collision_mask = 133

[node name="Node3D" type="Node3D" parent="Player"]

[node name="Control" type="Control" parent="Player/Node3D"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthBar" type="ProgressBar" parent="Player/Node3D/Control"]
modulate = Color(0.984314, 0, 0.0196078, 1)
self_modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 11.0
offset_top = 9.0
offset_right = 351.0
offset_bottom = 38.0
theme = SubResource("Theme_ptwst")
theme_override_colors/font_color = Color(0, 0, 0, 1)
value = 100.0
show_percentage = false

[node name="Camera3D" type="Camera3D" parent="Player"]
transform = Transform3D(-0.976909, 0.0316561, -0.2113, 0.000331551, 0.989187, 0.146663, 0.213658, 0.143206, -0.966356, -1.18815, 1.18379, -4.96117)
fov = 38.4

[node name="PowerTimer" type="Timer" parent="Player/Camera3D"]
wait_time = 0.081

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.87787, 0)
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_x3ma2")

[node name="Sith_Trooper_Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="SpawnPath" type="Path3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.61431, 0)
curve = SubResource("Curve3D_3d3av")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(0.00228246, 0, -0.999998, 0, 1, 0, 0.999998, 0, 0.00228246, -38.7244, 5.72205e-05, -38.4097)

[node name="MovingTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="Area3D2" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.99321, 0)
collision_layer = 8
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D2"]
shape = SubResource("WorldBoundaryShape3D_a47c8")

[node name="Area3D3" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.70972, -18.5904, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.182895, 0, 0)
shape = SubResource("BoxShape3D_dh6sm")

[node name="Map" parent="." instance=ExtResource("6_2xff2")]

[node name="SaberAttack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_5mftu")

[node name="Sith_Trooper_Die" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_iganr")

[node name="PlayerDie" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_mmcqs")

[node name="Saber" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_pgd7c")
autoplay = true

[node name="SaberTimer" type="Timer" parent="."]

[node name="SaberTimer2" type="Timer" parent="."]
wait_time = 2.5

[node name="Objectif" type="Control" parent="."]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="Objectif"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -312.0
offset_top = -146.0
offset_right = 312.0
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 0
text = "Repoussez les forces de l'Empire"
label_settings = SubResource("LabelSettings_2ax74")

[node name="ObjectifTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="attack" from="Player" to="." method="_on_player_attack"]
[connection signal="bodyEntered" from="Player" to="." method="_on_player_body_entered"]
[connection signal="die" from="Player" to="." method="_on_player_die"]
[connection signal="force" from="Player" to="." method="_on_player_force"]
[connection signal="timeout" from="Player/Camera3D/PowerTimer" to="." method="_on_power_timer_timeout"]
[connection signal="timeout" from="Sith_Trooper_Timer" to="." method="_on_sith_trooper_timer_timeout"]
[connection signal="timeout" from="MovingTimer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area3D2" to="Player" method="_on_area_3d_2_body_entered"]
[connection signal="body_entered" from="Area3D3" to="Player" method="_on_area_3d_3_body_entered"]
[connection signal="timeout" from="ObjectifTimer" to="." method="_on_objectif_timer_timeout"]
